fix: icon color + alignements

--- a/src/app/form/form.component.scss
+++ b/src/app/form/form.component.scss
@@ -87,7 +87,7 @@ h3 {
 .content {
   .editHome {
     height: calc(
-      100vh - #{$header-height} - #{$footer-height} - 81px - 1px - 55px
+      100vh - #{$header-height} - #{$footer-height} - 81px - 1px - 55px - 24px
     ) !important; // -1px because of header border
   }
   @media #{$tablet} {
@@ -512,9 +512,13 @@ img {
 .headerEditMode {
   max-width: 960px;
   margin: auto;
+  margin-top: 24px;
   h2 {
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
+  }
+  @media #{$tablet} {
+    margin-top: 0;
   }
 }
