--- a/src/app/shared/components/svg-icon/svg-icon.component.scss
+++ b/src/app/shared/components/svg-icon/svg-icon.component.scss
@@ -13,6 +13,10 @@
     fill: $grey-3;
     stroke: $grey-3;
   }
+  &.grey-1 {
+    fill: $grey-1;
+    stroke: $grey-1;
+  }
 }
 
 svg {
